$Id$

NOTE: This is the 1.3.X development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - 12-Oct-09 bb Patch [ 2697525 ] German translation corrections
 - 12-Oct-09 bb Patch [ 2770045 ] Access.php error - You are not authorized
 - 12-Oct-09 bb Patch [ 2777127 ] Patch for bug 2318177, report options not saving/displaying
 - 12-Oct-09 bb Patch [ 2782298 ] Users selection shifts
 - 12-Oct-09 bb <script language="javascript" was deprecated years ago
 - 12-Oct-09 bb Patch [ 2794125 ] Import Categories
 - 12-Oct-09 bb Patch [ 2801019 ] Fix bug that prevent event approval
 - 11-Oct-09 bb Patch [ 2802940 ] Allow public access in http authentication mode
 - 11-Oct-09 bb Patch [ 2809120 ] Allow rejection of a previously approved event
 - 11-Oct-09 bb Patch [ 2839645 ] Bugfix for the installation when language character != UTF-8
 - 10-Oct-09 bb Patch [ 2840937 ] Better error reporting for Oracle support in dbi4php.php
 - 10-Oct-09 bb Patch [ 2873491 ] Get rid of PHP 5.3 deprecated features
 - 10-Oct-09 bb Example of a good table summary="" in function display_month
 - Patch [ 2534090 ] PHP 5.2.8/Seg fault/blank page/Internal Server Error/untimed
 - Patch [ 2477178 ] New french translation
 - Patch [ 2269623 ] Configure default client timezone
 - Patch [ 2393257 ] Reset reminder upon event update
 - Patch [ 2261885 ] Missing shebang
 - Patch [ 2261841 ] Fix timebar views
 - Fixed bug: The remember login checkbox on login page would not work
   unless register globals was enabled
 - Fixed bug [ 2157160 ] in week selector wrong weeks
 - Fixed bug [ 2148435 ] Not possible to create/edit layer with duplicates=No
 - Delete translate phrases that are no longer used from code.
 - Patch [ 2135609 ] Date issues for repeating events in RSS feed
 - Fixed bug [ 2163504 ] usersel.php was not running "register_globals = off".
 - Fixed bug [ 2142564 ] rss_activity_log.php doesn't work with Oracle